Code refactoring and reorganization - adding support for twins - standardising date format - correcting bugs using the manually extracted data

--- a/compareAutomaticManual.ipynb
+++ b/compareAutomaticManual.ipynb
@@ -175,7 +175,7 @@
    "outputs": [],
    "source": [
     "dfNamesVars = pandas.read_excel('parsingData/variables_sip.xlsx')\n",
-    "renameDict = {k : v for  k, v in zip(dfNamesVars['Unnamed: 2'].values, dfNamesVars['Unnamed: 3'].values)}\n",
+    "renameDict = {k : (k + ' =' + v) for  k, v in zip(dfNamesVars['Unnamed: 2'].values, dfNamesVars['Unnamed: 3'].values)}\n",
     "renameDict['VAR_0189'] = 'Corticoides / semana de inicio'\n",
     "groupedBy = dfNamesVars.groupby('Unnamed: 2')\n",
     "def renameDatabaseSIP(df):\n",
@@ -191,6 +191,25 @@
     "            df.loc[df[colname] == option, colname] = value\n",
     "renameDatabaseSIP(nivelN1)\n",
     "renameDatabaseSIP(automatic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nivelN1[nivelN1[renameDict['VAR_0031']] != 'no'][renameDict['VAR_0019']].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, val in nivelN1.loc[nivelN1[renameDict['VAR_0023']]=='VEN19715913'].items():\n",
+    "    print(i, val.iloc[0])"
    ]
   },
   {
