--- a/databaseTransformer.ipynb
+++ b/databaseTransformer.ipynb
@@ -258,9 +258,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def hclin2pid(hClin):\n",
-    "    return pacientes.loc[pacientes.Identificacion == hClin].index[0]\n",
-    "hclin2pid(errors[60])"
+    "data.epicrisis.NumeroHistoria"
    ]
   },
   {
@@ -273,6 +271,9 @@
     "importlib.reload(birthDatasetStructure)\n",
     "# Split in newborn\n",
     "registrosByCaso = registros.groupby('Caso')\n",
+    "registrosByPatient = registros.groupby('NumeroHistoria')\n",
+    "\n",
+    "twins = {}\n",
     "processedDatasets = {}\n",
     "countCaseNotFound = 0\n",
     "countPatientNotFound = 0\n",
@@ -302,57 +303,19 @@
     "    \n",
     "    data = birthDatasetStructure.BirthDataset(c, casos.loc[c], p, registrosByCaso.get_group(c), \n",
     "                                                              pacientes,entriesInf)\n",
-    "    if data.epicrisis is not None:\n",
-    "        processedDatasets[c] = data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pp(processedDatasets['AD328171'].epicrisis.RegistroXML)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def getAllDiagnosis(epicrisis):\n",
-    "    xml = ET.fromstring(epicrisis.RegistroXML)\n",
-    "    diagnosisEntrada = [parsingDatabaseUtils.findInXML('CodigoDiagnosticoRelacionado1',xml)]\n",
-    "    diagnosisEntrada += [parsingDatabaseUtils.findInXML('CodigoDiagnosticoRelacionado2',xml)]\n",
-    "    diagnosisEntrada += [parsingDatabaseUtils.findInXML('CodigoDiagnosticoRelacionado3',xml)]\n",
-    "    diagnosisEntrada += [parsingDatabaseUtils.findInXML('CodigoDiagnosticoPrincipal',xml)]\n",
+    "    if data.epicrisis is None:\n",
+    "        continue\n",
+    "    for i, r in registrosByPatient.get_group(data.motherData.name if 'v' in data.motherData.name .lower() else int(data.motherData.name)).iterrows():\n",
+    "        inRange = lambda d1, d2: (datetime.datetime.strptime(d1, '%Y-%m-%d %H:%M:%S.%f') - datetime.datetime.strptime(d2, '%Y-%m-%d %H:%M:%S.%f')) < datetime.timedelta(days = 7)\n",
+    "        if r.CodigoRegistro == 20:\n",
+    "            if r.FechaAsignacionRegistro < data.epicrisis.FechaAsignacionRegistro and inRange(data.epicrisis.FechaAsignacionRegistro, r.FechaAsignacionRegistro):\n",
+    "                data.registersMother.append(r)\n",
+    "    #Discard twins:\n",
+    "    #if len(data.registrosRecienNacido) > 1:\n",
+    "    #    twins[c] = data\n",
+    "    #    continue\n",
     "    \n",
-    "    diagnosisSalida = [parsingDatabaseUtils.findInXML('CodigoDiagnosticoRelacionado1Salida',xml)]\n",
-    "    diagnosisSalida += [parsingDatabaseUtils.findInXML('CodigoDiagnosticoRelacionado2Salida',xml)]\n",
-    "    diagnosisSalida += [parsingDatabaseUtils.findInXML('CodigoDiagnosticoRelacionado3Salida',xml)]\n",
-    "    diagnosisSalida += [parsingDatabaseUtils.findInXML('CodigoDiagnosticoPrincipalSalida',xml)]\n",
-    "    return list(map(lambda s: s.strip(), filter(lambda s:  s, diagnosisSalida +  diagnosisEntrada)))\n",
-    "\n",
-    "from html.parser import HTMLParser\n",
-    "pars =HTMLParser()\n",
-    "\n",
-    "def parseMedicamentsInterventionsByDay(txt):\n",
-    "    txt = pars.unescape(txt)\n",
-    "    res = {}\n",
-    "    d = txt.split('Fecha:')\n",
-    "    for dayTxt in d:\n",
-    "        date = re.findall('^\\s*([0-9]+/[0-9]+/[0-9]+)',dayTxt)\n",
-    "        if not date:\n",
-    "            continue\n",
-    "        date = date[0]\n",
-    "        res[date] = re.findall('^-([0-9a-zA-Z-]+) -(.*?)- Cantidad: ([0-9]+)', dayTxt,  re.MULTILINE)\n",
-    "    return res\n",
-    "def getMedicamentsInterventionsFromEpicrisis(epi):\n",
-    "    et = ET.fromstring(epi.RegistroXML)\n",
-    "    medTxt =parsingDatabaseUtils.findInXML('MedicamentosAdministrado', et)\n",
-    "    procTxt = parsingDatabaseUtils.findInXML('ProcedimientosAsociados', et)\n",
-    "    return parseMedicamentsInterventionsByDay(medTxt), parseMedicamentsInterventionsByDay(procTxt)"
+    "    processedDatasets[c] = data"
    ]
   },
   {
@@ -366,6 +329,8 @@
     "print('Errors ! More than one register found')\n",
     "for c, p in processedDatasets.items():\n",
     "    if any((r  in getAllDiagnosis(p.epicrisis) for r in ['Z372', 'O300'])) :\n",
+    "        #Twins  / \n",
+    "        #print(len(p.registrosRecienNacido), getAllDiagnosis(p.epicrisis))\n",
     "        continue\n",
     "    elif len(p.registrosRecienNacido) > 1 and  any((r  in getAllDiagnosis(p.epicrisis) for r in ['Z370'])) :\n",
     "        wrongRegisters.append(c)\n",
@@ -374,9 +339,76 @@
     "    elif len(p.registrosRecienNacido) > 1:\n",
     "        for k in p.registrosRecienNacido:\n",
     "            if 'GEMEL' in parsingDatabaseUtils.findInXML('TexTarea_MotivoConsulta', p.registrosRecienNacido[k][k].RegistroXML):\n",
-    "                continue\n",
-    "        print(c, getAllDiagnosis(p.epicrisis),  len(p.registrosRecienNacido))        \n",
-    "        wrongRegisters.append(c)\n"
+    "                break\n",
+    "        else:\n",
+    "            print(c, getAllDiagnosis(p.epicrisis),  len(p.registrosRecienNacido))        \n",
+    "            wrongRegisters.append(c)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import copy\n",
+    "\n",
+    "\n",
+    "for i, k in enumerate(data.registroRecienNacido):\n",
+    "    p = data.copy()\n",
+    "    p.registroRecienNacido = {k :data.registroRecienNacido[k] }\n",
+    "    p.order = i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import caseTransformer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "registros"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "importlib.reload(caseTransformer)\n",
+    "importlib.reload(caseTransformer.parseNewbornRegister)\n",
+    "importlib.reload(caseTransformer.parseEpicrisis)\n",
+    "importlib.reload(caseTransformer.parseEchos)\n",
+    "importlib.reload(caseTransformer.parsingDatabaseUtils)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pp = parsingDatabaseUtils.prettyPrintXML\n",
+    "pp(list(processedDatasets.values())[500].procedure.XmlDescripcion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = caseTransformer.CaseTransformer(data = list(processedDatasets.values())[660])\n",
+    "c.processAll()"
    ]
   },
   {
@@ -423,15 +455,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def dateDifferenceDays(d1, d2):\n",
+    "    p1 = parsingDatabaseUtils.parseDate(d1, True) if isinstance(d1, str) else d1\n",
+    "    p2 = parsingDatabaseUtils.parseDate(d2, True) if isinstance(d2, str) else d2\n",
+    "    return (p1 - p2).days\n",
+    "\n",
+    "def egByEcho(date, res):\n",
+    "    bestDiff = 365\n",
+    "    bestEg  = 0\n",
+    "    date =parsingDatabaseUtils.parseDate(date, True)\n",
+    "    for i in range(10):\n",
+    "        if 'echo_%d_eg' % i in res:\n",
+    "            eg = res['echo_%d_eg' % i] \n",
+    "            dateEcho = parsingDatabaseUtils.parseDate(res['echo_%d_date' % i], True)\n",
+    "            \n",
+    "            if np.abs(dateDifferenceDays(date, dateEcho)) < bestDiff:\n",
+    "                bestDiff = np.abs(dateDifferenceDays(date, dateEcho))\n",
+    "                bestEg = float(eg) * 7 + dateDifferenceDays(date, dateEcho)\n",
+    "        else:\n",
+    "            break\n",
+    "    return bestEg\n",
+    " \n",
+    "def dateToGestationDays(date, res):\n",
+    "    \"\"\"\n",
+    "    Checks wether the event is before or after labour.\n",
+    "    \n",
+    "    - If it is before, return the number of gestation days\n",
+    "    - Otherwise, the time before.\n",
+    "    \"\"\"\n",
+    "    #If FUM\n",
+    "    \n",
+    "    #Otherwise, use the closest echo\n",
+    "    if True:\n",
+    "        pass\n",
+    "    else:\n",
+    "        days = egByEcho(date, res)\n",
+    "    return days"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for c, p in tqdm.notebook.tqdm(processedDatasets.items()):\n",
+    "    if p.epicrisis is not None and len(p.registrosRecienNacido) == 0:\n",
+    "        print(c)\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import parseEpicrisis\n",
     "importlib.reload(parsingDatabaseUtils)\n",
+    "importlib.reload(parseEpicrisis)\n",
+    "\n",
     "resSIP = {}\n",
     "breakLoop = False\n",
     "count = 0\n",
-    "for c, p in tqdm.tqdm_notebook(processedDatasets.items()):\n",
+    "for c, p in tqdm.notebook.tqdm(processedDatasets.items()):\n",
     "    if len(p.registrosRecienNacido) > 1:\n",
     "        print(c, 'Warning! I still cannot handle twins')\n",
     "        continue\n",
-    "    resSIP[c] = parsingDatabaseUtils.getMotherData(p)\n",
+    "    resSIP[c] = parseEpicrisis.getMotherData(p)\n",
+    "    resSIP[c] = joinDicts(resSIP[c], parseEpicrisis.getDataFromHospitalAdmision(p))\n",
     "    resSIP[c] = joinDicts(resSIP[c], parsingDatabaseUtils.getInformationFromProcedureDescription(p))\n",
     "    for k in p.registrosRecienNacido:\n",
     "        resSIP[c] = joinDicts(resSIP[c], parsingDatabaseUtils.getNewbornData(p, k))\n",
@@ -442,6 +534,18 @@
     "#l = list(df[(df.VAR_0294 != df.VAR_0294) & (df.VAR_0293 != df.VAR_0293)].index)\n",
     "#print(len(l))\n",
     "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "importlib.reload(parseEpicrisis)\n",
+    "antececedentesText = parsingDatabaseUtils.findInXML('AntecedentesHTML', processedDatasets[k].epicrisis.RegistroXML)\n",
+    "\n",
+    "parseEpicrisis.parseEchographies(antececedentesText, cleanText = True)"
    ]
   },
   {
@@ -468,14 +572,122 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "preanestesico, without = 0,0\n",
+    "anesthesia = []\n",
+    "registrosPreanestesico = registros.loc[registros.CodigoRegistro ==20]\n",
+    "for c, p in processedDatasets.items():\n",
+    "    if p.ingreso is None or True:\n",
+    "        hClinica = p.epicrisis.NumeroHistoria\n",
+    "        if len(registrosPreanestesico.loc[registrosPreanestesico.NumeroHistoria == hClinica]):\n",
+    "            preanestesico += 1\n",
+    "            anesthesia.append(registrosPreanestesico.loc[registrosPreanestesico.NumeroHistoria == hClinica].iloc[0])\n",
+    "        else:\n",
+    "            without += 1\n",
+    "preanestesico, without"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parsePreanastesic(registerXML):\n",
+    "    \"\"\"\n",
+    "    Parse some information from the anesthesia visit.\n",
+    "    \"\"\"\n",
+    "    res = {}\n",
+    "    \n",
+    "    etR = ET.fromstring(registerXML)\n",
+    "    #Height\n",
+    "    height = findInXML('Talla', et)\n",
+    "    weight = findInXML('Peso', et)\n",
+    "    \n",
+    "    \n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getNewbornRegister(self, num):\n",
+    "    \"\"\"\n",
+    "    Get the register by number\n",
+    "    \"\"\"\n",
+    "    k = list(self.registrosRecienNacido.keys())[num]\n",
+    "    return self.registrosRecienNacido[k][k]     \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keys = list(processedDatasets.keys())\n",
+    "parsingDatabaseUtils.prettyPrintXML(getNewbornRegister(processedDatasets[keys[240]], 0).RegistroXML)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parseEpicrisis.parseGPCA_and_fum(getNewbornRegister(processedDatasets[c], 0).RegistroXML.lower())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import parseMeasurementsByDay\n",
     "importlib.reload(parseMeasurementsByDay)\n",
+    "importlib.reload(parsingDatabaseUtils)\n",
     "measurements = {}\n",
     "measurementsControlsPrenatal = {}\n",
     "for c, p in tqdm.tqdm_notebook(processedDatasets.items()):\n",
     "    measurements[c] = parseMeasurementsByDay.getParaClinicsHospitalisation(p) + parseMeasurementsByDay.getAllVitalSigns(p)\n",
     "    if p.epicrisis is not None:\n",
-    "        measurementsControlsPrenatal[c] = parseMeasurementsByDay.parseParaclinicsBeforeHospitalisation(p.epicrisis)"
+    "        measurementsControlsPrenatal[c] = parseMeasurementsByDay.parseParaclinicsBeforeHospitalisation(p.epicrisis)\n",
+    "        fum = resSIP[c]['VAR_0057']\n",
+    "        \n",
+    "        for test, date, value in measurementsControlsPrenatal[c]:\n",
+    "            if test in ['vdrl', 'HB', 'prt']:\n",
+    "                weeks = dateDifferenceDays(date, fum)//7\n",
+    "                if weeks < 0:\n",
+    "                    raise ValueError('Inconsistent!')\n",
+    "\n",
+    "                elif weeks <= 20:\n",
+    "                    if test == 'vdrl':\n",
+    "                        #no treponemica\n",
+    "                        resSIP[c]['VAR_0112'] = 'A' if not value else 'B'\n",
+    "                        resSIP[c]['VAR_0412'] = weeks # Weeks\n",
+    "\n",
+    "                    elif test == 'prt':\n",
+    "                        #treponemica\n",
+    "                        resSIP[c]['VAR_0415'] = 'A' if not value else 'B'\n",
+    "                        resSIP[c]['VAR_0413'] = weeks # Weeks\n",
+    "\n",
+    "                    elif test == 'HB':\n",
+    "                        resSIP[c]['VAR_0095'] = value\n",
+    "\n",
+    "                elif weeks > 20:\n",
+    "                    if test == 'vdrl':\n",
+    "                        resSIP[c]['VAR_0114'] = 'A' if not value else 'B'\n",
+    "                        resSIP[c]['VAR_0419'] = weeks # Weeks\n",
+    "\n",
+    "                    elif test == 'prt':\n",
+    "                        resSIP[c]['VAR_0421'] = 'A' if not value else 'B'\n",
+    "                        resSIP[c]['VAR_0420'] = weeks # Weeks\n",
+    "\n",
+    "                    elif test == 'HB':\n",
+    "                        resSIP[c]['VAR_0099'] = value\n"
    ]
   },
   {
@@ -836,10 +1048,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def dateToWeeks(res):\n",
-    "    #If FUM\n",
+    "\n",
+    "(dateparser.parse('6/1/20') - dateparser.parse('4/11/19')).days // 7, (dateparser.parse('6/1/20') - dateparser.parse('4/11/19')).days %7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dateDifferenceDays(d1, d2):\n",
+    "    p1 = dateparser.parse(d1) if isinstance(d1, str) else d1\n",
+    "    p2 = dateparser.parse(d2) if isinstance(d2, str) else d2\n",
+    "    return (p1 - p2).days\n",
+    "\n",
+    "def egByEcho(date, res):\n",
+    "    bestDiff = 365\n",
+    "    bestEg  = 0\n",
+    "    date =dateparser.parse(date)\n",
+    "    for i in range(10):\n",
+    "        if 'echo_%d_eg' in res:\n",
+    "            eg = res['echo_%d_eg' % i] \n",
+    "            dateEcho = dateparser.parse(res['echo_%d_date' % i])\n",
+    "            \n",
+    "            if np.abs(dateDifferenceDays(date, dateEcho)) < bestDiff:\n",
+    "                bestDiff = np.abs(dateDifferenceDays(date, dateEcho))\n",
+    "                bestEg = float(eg) * 7 + dateDifferenceDays(date, dateEcho)\n",
+    "    return bestEg\n",
+    " \n",
+    "def dateToGestationDays(date, res):\n",
+    "    \"\"\"\n",
+    "    Checks wether the event is before or after labour.\n",
     "    \n",
-    "    #Otherwise, use the closest echo"
+    "    - If it is before, return the number of gestation days\n",
+    "    - Otherwise, the time before.\n",
+    "    \"\"\"\n",
+    "    #If FUM\n",
+    "\n",
+    "    #Otherwise, use the closest echo\n",
+    "    else:\n",
+    "        days = egByEcho(date, res)\n",
+    "    return days"
    ]
   },
   {
