Automitised, completed missing codes, solved twin issue (now are read properly. Working on the correct parsing of the dates, to cope with common errors and have a failsafe mechanism when there are errors. TODO: compare with manual, correct reading of dates, improve alta

--- a/databaseTransformer.ipynb
+++ b/databaseTransformer.ipynb
@@ -258,15 +258,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.epicrisis.NumeroHistoria"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import birthDatasetStructure\n",
     "importlib.reload(birthDatasetStructure)\n",
     "# Split in newborn\n",
@@ -314,7 +305,6 @@
     "    #if len(data.registrosRecienNacido) > 1:\n",
     "    #    twins[c] = data\n",
     "    #    continue\n",
-    "    \n",
     "    processedDatasets[c] = data"
    ]
   },
@@ -326,11 +316,13 @@
    "source": [
     "#Look for twins\n",
     "wrongRegisters = []\n",
+    "twins = {}\n",
     "print('Errors ! More than one register found')\n",
     "for c, p in processedDatasets.items():\n",
     "    if any((r  in getAllDiagnosis(p.epicrisis) for r in ['Z372', 'O300'])) :\n",
     "        #Twins  / \n",
     "        #print(len(p.registrosRecienNacido), getAllDiagnosis(p.epicrisis))\n",
+    "        twins[c] = p\n",
     "        continue\n",
     "    elif len(p.registrosRecienNacido) > 1 and  any((r  in getAllDiagnosis(p.epicrisis) for r in ['Z370'])) :\n",
     "        wrongRegisters.append(c)\n",
@@ -339,6 +331,7 @@
     "    elif len(p.registrosRecienNacido) > 1:\n",
     "        for k in p.registrosRecienNacido:\n",
     "            if 'GEMEL' in parsingDatabaseUtils.findInXML('TexTarea_MotivoConsulta', p.registrosRecienNacido[k][k].RegistroXML):\n",
+    "                twins[c] = p\n",
     "                break\n",
     "        else:\n",
     "            print(c, getAllDiagnosis(p.epicrisis),  len(p.registrosRecienNacido))        \n",
@@ -351,13 +344,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import copy\n",
-    "\n",
-    "\n",
-    "for i, k in enumerate(data.registroRecienNacido):\n",
-    "    p = data.copy()\n",
-    "    p.registroRecienNacido = {k :data.registroRecienNacido[k] }\n",
-    "    p.order = i"
+    "for c,data in twins.items():\n",
+    "    if len(data.registrosRecienNacido) != 2:\n",
+    "        continue\n",
+    "    for i, v  in enumerate(data.splitTwins()):\n",
+    "        processedDatasets[c + '-%d' % i] = v\n"
    ]
   },
   {
@@ -366,7 +357,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import caseTransformer"
+    "for c in wrongRegisters:\n",
+    "    del processedDatasets[c]\n",
+    "for c in twins:\n",
+    "    del processedDatasets[c]"
    ]
   },
   {
@@ -375,20 +369,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "registros"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import caseTransformer\n",
     "importlib.reload(caseTransformer)\n",
     "importlib.reload(caseTransformer.parseNewbornRegister)\n",
     "importlib.reload(caseTransformer.parseEpicrisis)\n",
     "importlib.reload(caseTransformer.parseEchos)\n",
-    "importlib.reload(caseTransformer.parsingDatabaseUtils)"
+    "importlib.reload(caseTransformer.parsingDatabaseUtils)\n",
+    "importlib.reload(caseTransformer.parseMeasurementsByDay)\n",
+    "importlib.reload(caseTransformer.parseInterventions)\n",
+    "importlib.reload(caseTransformer.parseDiagnosis)\n",
+    "importlib.reload(caseTransformer.parseMedicaments)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resSIP = {}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pp(d.epicrisis.RegistroXML)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for c, d in tqdm.notebook.tqdm(processedDatasets.items()):\n",
+    "    if c in resSIP:\n",
+    "        continue\n",
+    "    cT = caseTransformer.CaseTransformer(data = d)    \n",
+    "    resSIP[c] = cT.processAll()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%debug"
    ]
   },
   {
@@ -407,8 +444,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c = caseTransformer.CaseTransformer(data = list(processedDatasets.values())[660])\n",
-    "c.processAll()"
+    "data = list(processedDatasets.values())[660]"
    ]
   },
   {
@@ -417,8 +453,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for c in wrongRegisters:\n",
-    "    del processedDatasets[c]"
+    "pp(data.getNewbornRegister(0).RegistroXML)"
    ]
   },
   {
@@ -456,8 +491,8 @@
    "outputs": [],
    "source": [
     "def dateDifferenceDays(d1, d2):\n",
-    "    p1 = parsingDatabaseUtils.parseDate(d1, True) if isinstance(d1, str) else d1\n",
-    "    p2 = parsingDatabaseUtils.parseDate(d2, True) if isinstance(d2, str) else d2\n",
+    "    p1 = parsingDatabaseUtils.parseDate(d1, ''datetime) if isinstance(d1, str) else d1\n",
+    "    p2 = parsingDatabaseUtils.parseDate(d2, 'datetime') if isinstance(d2, str) else d2\n",
     "    return (p1 - p2).days\n",
     "\n",
     "def egByEcho(date, res):\n",
@@ -511,9 +546,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "registros.FechaAsignacionRegistro"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import parseEpicrisis\n",
     "importlib.reload(parsingDatabaseUtils)\n",
     "importlib.reload(parseEpicrisis)\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "resSIP = {}\n",
     "breakLoop = False\n",
@@ -592,41 +639,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def parsePreanastesic(registerXML):\n",
-    "    \"\"\"\n",
-    "    Parse some information from the anesthesia visit.\n",
-    "    \"\"\"\n",
-    "    res = {}\n",
-    "    \n",
-    "    etR = ET.fromstring(registerXML)\n",
-    "    #Height\n",
-    "    height = findInXML('Talla', et)\n",
-    "    weight = findInXML('Peso', et)\n",
-    "    \n",
-    "    \n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def getNewbornRegister(self, num):\n",
-    "    \"\"\"\n",
-    "    Get the register by number\n",
-    "    \"\"\"\n",
-    "    k = list(self.registrosRecienNacido.keys())[num]\n",
-    "    return self.registrosRecienNacido[k][k]     \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "keys = list(processedDatasets.keys())\n",
     "parsingDatabaseUtils.prettyPrintXML(getNewbornRegister(processedDatasets[keys[240]], 0).RegistroXML)"
    ]
@@ -645,19 +657,67 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import parseMeasurementsByDay\n",
     "importlib.reload(parseMeasurementsByDay)\n",
     "importlib.reload(parsingDatabaseUtils)\n",
     "measurements = {}\n",
     "measurementsControlsPrenatal = {}\n",
+    "\n",
+    "def dateDifferenceDays(d1, d2):\n",
+    "    p1 = parsingDatabaseUtils.parseDate(d1, ''datetime) if isinstance(d1, str) else d1\n",
+    "    p2 = parsingDatabaseUtils.parseDate(d2, 'datetime') if isinstance(d2, str) else d2\n",
+    "    return (p1 - p2).days\n",
+    "\n",
+    "def processPrenatalMeasurements(measurementsControlsPrenatal, fum):\n",
+    "    res = {}\n",
+    "    for test, date, value, _ in measurementsControlsPrenatal[c]:\n",
+    "        if test in ['vdrl', 'HB', 'prt']:\n",
+    "            weeks = dateDifferenceDays(date, fum)//7\n",
+    "            if weeks < 0:\n",
+    "                raise ValueError('Inconsistent!')\n",
+    "\n",
+    "            elif weeks <= 20:\n",
+    "                if test == 'vdrl':\n",
+    "                    #no treponemica\n",
+    "                    res['VAR_0112'] = 'A' if not value else 'B'\n",
+    "                    res['VAR_0412'] = weeks # Weeks\n",
+    "\n",
+    "                elif test == 'prt':\n",
+    "                    #treponemica\n",
+    "                    res['VAR_0415'] = 'A' if not value else 'B'\n",
+    "                    res['VAR_0413'] = weeks # Weeks\n",
+    "\n",
+    "                elif test == 'HB':\n",
+    "                    resSIP[c]['VAR_0095'] = value\n",
+    "\n",
+    "            elif weeks > 20 and weeks < 60:\n",
+    "                if test == 'vdrl':\n",
+    "                    res['VAR_0114'] = 'A' if not value else 'B'\n",
+    "                    res['VAR_0419'] = weeks # Weeks\n",
+    "\n",
+    "                elif test == 'prt':\n",
+    "                    res['VAR_0421'] = 'A' if not value else 'B'\n",
+    "                    res['VAR_0420'] = weeks # Weeks\n",
+    "\n",
+    "                elif test == 'HB':\n",
+    "                    res'VAR_0099'] = value\n",
+    "    return res\n",
+    "\n",
     "for c, p in tqdm.tqdm_notebook(processedDatasets.items()):\n",
     "    measurements[c] = parseMeasurementsByDay.getParaClinicsHospitalisation(p) + parseMeasurementsByDay.getAllVitalSigns(p)\n",
     "    if p.epicrisis is not None:\n",
     "        measurementsControlsPrenatal[c] = parseMeasurementsByDay.parseParaclinicsBeforeHospitalisation(p.epicrisis)\n",
     "        fum = resSIP[c]['VAR_0057']\n",
     "        \n",
-    "        for test, date, value in measurementsControlsPrenatal[c]:\n",
+    "        for test, date, value, _ in measurementsControlsPrenatal[c]:\n",
     "            if test in ['vdrl', 'HB', 'prt']:\n",
     "                weeks = dateDifferenceDays(date, fum)//7\n",
     "                if weeks < 0:\n",
